--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore:24.4.3'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
+    testImplementation 'io.mockk:mockk:1.13.4'
+    androidTestImplementation 'io.mockk:mockk-android:1.13.4'
+    testImplementation 'org.mockito:mockito-core:4.1.0'
+    testImplementation 'io.mockk:mockk:1.12.0'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
 }
