--- a/.github/workflows/CI_TareApp.yml
+++ b/.github/workflows/CI_TareApp.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      # Compila la aplicación, sería como darle al play en el editor. Tarda un poco, así que lo comento, pero es parte del pipeline hacer un Build
-#      - name: build app with Gradle
-#        run: ./gradlew assemble
+    # Compila la aplicación, sería como darle al play en el editor. Tarda un poco, así que lo comento, pero es parte del pipeline hacer un Build
+      - name: build app with Gradle
+        run: ./gradlew assemble
 
       - name: Lint Code Base
         uses: github/super-linter@v4
