--- a/.github/workflows/CI_TareApp.yml
+++ b/.github/workflows/CI_TareApp.yml
@@ -33,6 +33,7 @@ jobs:
           #VALIDATE_ALL_CODEBASE: false # Descomentada solo analiza los cambios del último commit, comentada t0do el proyecto
           FILTER_REGEX_INCLUDE: .*src/.* # Solo quiero que me busque errores míos, no de lo que crea Android Studio
           FILTER_REGEX_EXCLUDE: .*res/.* # Quiero que me diga errores de código, no de los XML
+          DISABLE_ERRORS: true
 
       - name: Unit Tests # Ejecuta t0do lo que tenga @Test (creo)
         run: ./gradlew testDebugUnitTest
