--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
         jvmTarget = '1.8'
     }
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/LICENSE-notice.md'
+    }
 }
 
 dependencies {
