--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
             android:name="presentacion.FormActivity"
             android:exported="true" />
         <activity
+            android:name="presentacion.TaskListActivity"
+            android:exported="true" />
+        <activity
             android:name="presentacion.ButtonActivity"
             android:exported="true" >
             <intent-filter>
