--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.1.0'
     testImplementation 'io.mockk:mockk:1.12.0'
     implementation 'com.google.firebase:firebase-database:20.0.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 }
