--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name="presentacion.TaskListActivity"
             android:exported="true" />
         <activity
-            android:name="presentacion.ButtonActivity"
+            android:name="presentacion.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
