Todos los fragments creados para poder moverse por la navbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name="presentacion.FormActivity"
             android:exported="true" />
         <activity
-            android:name="presentacion.TaskListActivity"
+            android:name="presentacion.TaskListFragment"
             android:exported="true" />
         <activity
             android:name="presentacion.MainActivity"
