--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name="presentacion.FormActivityRecordatorio"
+            android:exported="true" />
+        <activity
             android:name="presentacion.FormActivity"
             android:exported="true" />
         <activity
